--- a/Saite.html
+++ b/Saite.html
@@ -15,7 +15,7 @@
     </header>
 
     <section>
-        <img src="https://github.com/pilomas">
+        <img src="https://github.com/Pilomas">
     </section>
 
 </body>
