--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>web developer</h1>
+        <h1>Infra em AWS</h1>
         <span>Alvin Miguel Jiacomini</span>
         <a href="#">Saiba mais</a>
     </header>
@@ -48,4 +48,32 @@
             </div>
         </li>
     </ul>
+</section>
+
+
+<section id="secao-orcamento">
+    <form action="">
+        <h2>Orçamento</h2>
+        <label for="Qtd dados">Quantidade de dados a serem passsadas para a AWS: (em kBytes)</label>
+        <input type="number" id="Qtd dados">
+
+        <label for="S/N">Sim ou Não</label>
+        
+        <input type="checkbox" id="S/N">
+        <label for="">Banco de dado auto gerido, serverless ou nosso serviço de gestão própria?</label>
+        <div>
+            <input type="radio" id="AutoGerido" name="DB">
+            <label for="Autogerido">Auto Gerido:</label>
+
+            <input type="radio"  id="servless" name="DB">
+            <label for="servless">Serverless:</label>
+
+            <input type="radio" id="Ctrl3" name="DB">
+            <label for="Ctrl3">Gestão como serviço:</label> 
+        </div>
+        <label for="prazo">Prazo:</label>
+        <input type="date" id="prazo">
+        
+        <output>R$0,00</output>
+    </form>
 </section>
