--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta>
-    <link rel="stylesheet" type="text/css" href="Style.css"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width", initial-scale="1.0">
+    <link rel="stylesheet" type="text/css" href="../assets/css/Style.css"/>
+    <script src="./assets/js/script.js"></script>
 </head>
 <body>
 
@@ -15,10 +17,10 @@
     </header>
 
     <section>
-        <img src="https://github.com/Pilomas">
+        <img src="https://avatars.githubusercontent.com/u/79878253?v=4">
     </section>
 
-</body>
+
 
 
 <section id="secao-projetos">
@@ -54,26 +56,30 @@
 <section id="secao-orcamento">
     <form action="">
         <h2>Orçamento</h2>
-        <label for="Qtd dados">Quantidade de dados a serem passsadas para a AWS: (em kBytes)</label>
-        <input type="number" id="Qtd dados">
+        <label for="Qtd dados">Quantidade de dados a serem passsadas para a AWS: (em Mb)</label>
+        <input type="number" id="QtdDados">
 
-        <label for="S/N">Sim ou Não</label>
-        
-        <input type="checkbox" id="S/N">
-        <label for="">Banco de dado auto gerido, serverless ou nosso serviço de gestão própria?</label>
+        <label for="SH">Sistema Hibrido?</label>
+        <input type="checkbox" id="SH">
+
+        <label for="DB">Banco de dado auto gerido, serverless ou gestão como serviço?</label>
         <div>
             <input type="radio" id="AutoGerido" name="DB">
             <label for="Autogerido">Auto Gerido:</label>
 
-            <input type="radio"  id="servless" name="DB">
+            <input type="radio"  id="Servless" name="DB">
             <label for="servless">Serverless:</label>
 
             <input type="radio" id="Ctrl3" name="DB">
             <label for="Ctrl3">Gestão como serviço:</label> 
         </div>
-        <label for="prazo">Prazo:</label>
-        <input type="date" id="prazo">
+        <label for="prazo" id="label_prazo">Prazo:</label>
+        <input type="range" id="prazo" min="1" max="12">
         
-        <output>R$0,00</output>
+        <output id="output">R$0,00</output>
     </form>
 </section>
+
+</body>
+
+<script src="./assets/js/script.js"></script>
