commit on 'main'

--- a/index.html
+++ b/index.html
@@ -3,12 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
-    <link rel="stylesheet" type="text/css" href="../assets/css/Style.css"/>
+    <link rel="stylesheet" type="text/css" href="./assets/css/Style.css"/>
     <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/menu.js"></script>
 </head>
 <body>
+    <div class='hamburguer'>
+        <div class='linha'></div>
+        <div class='linha'></div>
+        <div class='linha'></div>
+    </div>
+
+    <nav class="menu">
+        <ul>
+            <li><a href="http://">Home</a></li>
+            <li><a href="http://">Apresentação</a></li>
+            <li><a href="http://">Projetos</a></li>
+            <li><a href="http://">Orçamentos</a></li>
+        </ul>
+    </nav>
 
     <header>
         <h1>Infra em AWS</h1>
