--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <link rel="stylesheet" type="text/css" href="./assets/css/Style.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="./assets/js/script.js"></script>
     <script src="./assets/js/menu.js"></script>
 </head>
 <body>
-    <div class='hamburguer'>
+    <div class="hamburguer">
         <div class='linha'></div>
         <div class='linha'></div>
         <div class='linha'></div>
@@ -17,10 +18,27 @@
 
     <nav class="menu">
         <ul>
-            <li><a href="http://">Home</a></li>
-            <li><a href="http://">Apresentação</a></li>
-            <li><a href="http://">Projetos</a></li>
-            <li><a href="http://">Orçamentos</a></li>
+            <li>
+                <a href="#">
+                    <i class="fa-solid fa-house-user"></i>
+                    Home
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    Apresentação
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    Projetos
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    Orçamentos
+                </a>
+            </li>
         </ul>
     </nav>
 
@@ -97,3 +115,4 @@
 </body>
 
 <script src="./assets/js/script.js"></script>
+
