--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             </div>
         </li>
         <li class="card">
-            <div class="card-image"><img src="" alt=""></div>
+            <div class="card-image"><img src="./assets/images/gundam.jfif" alt=""></div>
             <div class="card-info">
-                <h3></h3>
-                <h4></h4>
+                <h2>Gundam</h2>
+                <h3>Eclipse</h3>
                 <p></p>
             </div>
         </li>
