--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
+    <title>Document</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/Style.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="./assets/js/script.js"></script>
-    <script src="./assets/js/menu.js"></script>
 </head>
+
 <body>
     <div class="hamburguer">
         <div class='linha'></div>
@@ -25,17 +26,20 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="#secao-apresentacao">
+                    <i class="fa-solid fa-user"></i>
                     Apresentação
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="#secao-projetos">
+                    <i class="fa-solid fa-code"></i>
                     Projetos
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="#secao-orcamento">
+                    <i class="fa-solid fa-money-bill"></i>
                     Orçamentos
                 </a>
             </li>
@@ -48,71 +52,77 @@
         <a href="#">Saiba mais</a>
     </header>
 
-    <section>
-        <img src="https://avatars.githubusercontent.com/u/79878253?v=4">
+    <section id="secao-apresentacao">
+        <img class="avatar" src="https://avatars.githubusercontent.com/u/79878253?v=4" alt="avatar">
+        <div id="texto-apresentacao">
+            <h2>Infraestrutura em Cloud</h2>
+            <p></p>
+            <a href="#secao-projetos" class="botao">projetos</a>
+        </div>
     </section>
 
 
 
+    <section id="secao-projetos">
+        <ul>
+            <li class="card">
+                <div css="calard-image"><img src="./assets/images/aws.png" alt=""></div>
+                <div class="card-info">
+                    <h3>Projetos</h3>
+                    <h4>AWS Partner</h4>
+                    <p></p>
+                </div>
+            </li>
+            <li class="card">
+                <div class="card-image"><img src="./assets/images/gundam.jfif" alt=""></div>
+                <div class="card-info">
+                    <h2>Gundam</h2>
+                    <h3>Eclipse</h3>
+                    <p></p>
+                </div>
+            </li>
+            <li class="card">
+                <div class="card-image"><img src="" alt=""></div>
+                <div class="card-info">
+                    <h3></h3>
+                    <h4></h4>
+                    <p></p>
+                </div>
+            </li>
+        </ul>
+    </section>
 
-<section id="secao-projetos">
-    <ul>
-        <li class="card">
-            <div class="card-image"><img src="" alt=""></div>
-            <div class="card-info">
-                <h3></h3>
-                <h4></h4>
-                <p></p>
+
+    <section id="secao-orcamento">
+        <form action="">
+            <h2>Orçamento</h2>
+            <label for="Qtd dados">Quantidade de dados a serem passsadas para a AWS: (em Mb)</label>
+            <input type="number" id="QtdDados">
+
+            <label for="SH">Sistema Hibrido?</label>
+            <input type="checkbox" id="SH">
+
+            <label for="DB">Banco de dado auto gerido, serverless ou gestão como serviço?</label>
+            <div>
+                <input type="radio" id="AutoGerido" name="DB">
+                <label for="Autogerido">Auto Gerido:</label>
+
+                <input type="radio"  id="Servless" name="DB">
+                <label for="servless">Serverless:</label>
+
+                <input type="radio" id="Ctrl3" name="DB">
+                <label for="Ctrl3">Gestão como serviço:</label> 
             </div>
-        </li>
-        <li class="card">
-            <div class="card-image"><img src="./assets/images/gundam.jfif" alt=""></div>
-            <div class="card-info">
-                <h2>Gundam</h2>
-                <h3>Eclipse</h3>
-                <p></p>
-            </div>
-        </li>
-        <li class="card">
-            <div class="card-image"><img src="" alt=""></div>
-            <div class="card-info">
-                <h3></h3>
-                <h4></h4>
-                <p></p>
-            </div>
-        </li>
-    </ul>
-</section>
-
-
-<section id="secao-orcamento">
-    <form action="">
-        <h2>Orçamento</h2>
-        <label for="Qtd dados">Quantidade de dados a serem passsadas para a AWS: (em Mb)</label>
-        <input type="number" id="QtdDados">
-
-        <label for="SH">Sistema Hibrido?</label>
-        <input type="checkbox" id="SH">
-
-        <label for="DB">Banco de dado auto gerido, serverless ou gestão como serviço?</label>
-        <div>
-            <input type="radio" id="AutoGerido" name="DB">
-            <label for="Autogerido">Auto Gerido:</label>
-
-            <input type="radio"  id="Servless" name="DB">
-            <label for="servless">Serverless:</label>
-
-            <input type="radio" id="Ctrl3" name="DB">
-            <label for="Ctrl3">Gestão como serviço:</label> 
-        </div>
-        <label for="prazo" id="label_prazo">Prazo:</label>
-        <input type="range" id="prazo" min="1" max="12">
-        
-        <output id="output">R$0,00</output>
-    </form>
-</section>
+            <label for="prazo" id="label_prazo">Prazo:</label>
+            <input type="range" id="prazo" min="1" max="12">
+            
+            <output id="output">R$0,00</output>
+        </form>
+    </section>
+        <script src="./assets/js/script.js"></script>
+        <script src="./assets/js/menu.js"></script>
 
 </body>
 
-<script src="./assets/js/script.js"></script>
+</html>
 
