--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <div class="hamburguer">
-        <div class='linha'></div>
-        <div class='linha'></div>
-        <div class='linha'></div>
+        <div class="linha"></div>
+        <div class="linha"></div>
+        <div class="linha"></div>
     </div>
 
     <nav class="menu">
@@ -47,16 +47,16 @@
     </nav>
 
     <header>
-        <h1>Infra em AWS</h1>
+        <h1>Migrações para AWS</h1>
         <span>Alvin Miguel Jiacomini</span>
         <a href="#">Saiba mais</a>
     </header>
 
     <section id="secao-apresentacao">
-        <img class="avatar" src="https://avatars.githubusercontent.com/u/79878253?v=4" alt="avatar">
+        <img class="avatar large-only" src="https://avatars.githubusercontent.com/u/79878253?v=4" alt="avatar">
         <div id="texto-apresentacao">
-            <h2>Infraestrutura em Cloud</h2>
-            <p></p>
+            <h2>Topografia, migração ou levantamento da sua estrutura em CLOUD</h2>
+            <p>E coleções</p>
             <a href="#secao-projetos" class="botao">projetos</a>
         </div>
     </section>
@@ -113,10 +113,11 @@
                 <input type="radio" id="Ctrl3" name="DB">
                 <label for="Ctrl3">Gestão como serviço:</label> 
             </div>
+            
             <label for="prazo" id="label_prazo">Prazo:</label>
             <input type="range" id="prazo" min="1" max="12">
             
-            <output id="output">R$0,00</output>
+            <output id="output">R$100,00</output>
         </form>
     </section>
         <script src="./assets/js/script.js"></script>
