--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section id="secao-projetos">
         <ul>
             <li class="card">
-                <div css="calard-image"><img src="./assets/images/aws.png" alt=""></div>
+                <div css="calard-image"><img src="./assets/images/AWS.png" alt=""></div>
                 <div class="card-info">
                     <h3>Projetos</h3>
                     <h4>AWS Partner</h4>
